# twitch-bot

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TwitchBot.sln  TwitchBot.vcxproj  TwitchBot.vcxproj.filters  app_channels.toml  app_config,example.toml  config.cpp  config.example.toml  config.hpp  faceit_client.cpp  faceit_client.hpp  http_client.cpp  http_client.hpp  irc_socket.cpp  irc_socket.hpp  main.cpp  timer.hpp  twitch_bot.cpp  twitch_bot.hpp  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  integrations.cpp  integrations.hpp  main.cpp
app/include/app/: app_channel_store.hpp  channel_store.hpp  control_commands.hpp  integrations.hpp  register_integrations.hpp
app/include/app/faceit/: faceit_client.hpp
app/src/: app_channel_store.cpp  channel_store.cpp  control_commands.cpp  integrations.cpp  main.cpp  register_integrations.cpp
app/src/faceit/: faceit_client.cpp  record_service.cpp
cmake/: CompilerWarnings.cmake  Hardening.cmake  PreventInSourceBuilds.cmake  Sanitisers.cmake  StaticAnalyzers.cmake
cmake/toolchains/: msvc-vcpkg.cmake
include/: config_path.hpp.in
include/twitch_bot/: config.hpp  faceit_client.hpp  http_client.hpp  irc_socket.hpp  twitch_bot.hpp
lib/: CMakeLists.txt
lib/include/: config_path.hpp.in
lib/include/twitch_bot/: channel_store.hpp  command_dispatcher.hpp  config.hpp  faceit_client.hpp  helix_client.hpp  http_client.hpp  irc_client.hpp  message_parser.hpp  record_service.hpp  twitch_bot.hpp
lib/include/utils/: attributes.hpp  chunked_encoding.hpp  timer.hpp  transparent_string.hpp
lib/net/: CMakeLists.txt
lib/net/cmake/: tb_netConfig.cmake.in
lib/net/include/tb/net/: http_client.hpp
lib/net/include/tb/net/http/: chunked_encoding.hpp  cookie.hpp  cookie_jar.hpp  encoding.hpp  error.hpp  http_client.hpp  mime.hpp  redirect_policy.hpp  url.hpp
lib/net/src/tb/net/: http_client.cpp
lib/net/src/tb/net/http/: br_decoder.cpp  cookie.cpp  cookie_jar.cpp  gzip_decoder.cpp  http_client.cpp  mime.cpp
lib/src/: channel_store.cpp  command_dispatcher.cpp  config.cpp  faceit_client.cpp  helix_client.cpp  http_client.cpp  irc_client.cpp  message_parser.cpp  record_service.cpp  twitch_bot.cpp
lib/twitch_core/: CMakeLists.txt
lib/twitch_core/cmake/: tb_twitch_coreConfig.cmake.in
lib/twitch_core/include/tb/parser/: irc_message_parser.hpp  irc_simd_scan.hpp
lib/twitch_core/include/tb/twitch/: channel_store.hpp  chat_rate_limiter.hpp  command_dispatcher.hpp  config.hpp  helix_client.hpp  irc_client.hpp  twitch_bot.hpp
lib/twitch_core/src/: channel_store.cpp  chat_rate_limiter.cpp  command_dispatcher.cpp  config.cpp  helix_client.cpp  irc_client.cpp  twitch_bot.cpp
lib/utils/: CMakeLists.txt
lib/utils/cmake/: tb_utilsConfig.cmake.in
lib/utils/include/tb/utils/: attributes.hpp  timer.hpp  transparent_string_hash.hpp
src/: config.cpp  faceit_client.cpp  http_client.cpp  irc_socket.cpp  main.cpp  twitch_bot.cpp
tools/: format-cmake.ps1  update-cacert.ps1
